# Jacc---Autonomous-Software-Engineering-Agent

./: .gitignore
jacc/: README.md
jacc/src/agent/: state.py
jacc/src/agent/experiments/: create_dataset.py  repo_memory_exp.py  swe_bench_lite_grouped.json
jacc/src/agent/model/: api_model.py  vllm_model.py
jacc/src/memory-api/: .env  .env.example  docker-compose.yml
jacc/src/memory-api/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
jacc/src/memory-api/api/src/: __init__.py  config.py  daemon.txt  main.py  metrics.py  migrations.py  models.py  server.py
jacc/src/memory-api/api/src/alembic/: env.py
jacc/src/memory-api/api/src/api/: __init__.py  http.py  mcp.py
jacc/src/memory-api/api/src/engine/: cross_encoder.py  db_utils.py  embeddings.py  interface.py  llm_wrapper.py  query_analyzer.py  response_models.py  utils.py
jacc/src/memory-api/api/src/extensions/: __init__.py  base.py  context.py  http.py  loader.py  operation_validator.py  tenant.py
jacc/src/memory-api/api/src/extensions/builtin/: __init__.py  tenant.py
jacc/src/memory-api/database/: Dockerfile
